[package]
name = "git-gsub"
version = "0.2.1"
authors = ["Kohei Hasegawa"]
description = "A Git subcommand to do gsub in a repository"
repository = "https://github.com/banyan/rust-git-gsub"
license = "MIT"
readme = "README.md"

[dependencies]
getopts = "0.2.4"
shlex = "0.1.1"

[dev-dependencies]
tempdir = "0.3"
